# zero-dl

./: flake.nix  pyproject.toml
app/: main.ipynb
